login con algoritmo de Luhn

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,11 @@ django-celery-beat==1.5.0
 django-celery-results==1.1.0
 django-cors-headers==2.4.0
 django-timezone-field==3.0
-djangorestframework==3.8.2
+djangorestframework==3.9.4
 ecdsa==0.13.2
 future==0.17.1
 kombu==4.6.3
+luhn==0.2.0
 psycopg2-binary==2.7.5
 pyasn1==0.4.5
 python-crontab==2.3.6
