--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
     expose:
       - "8000"
     depends_on:
-      - rabbitmq
+      - db
     networks:
       - internal
 
@@ -67,7 +67,7 @@ services:
       - app
     volumes:
       - ./docker-utils/nginx/default.template.conf:/root/default.template.conf
-      - ./docker-utils/ssl/:/site/ssl/
+      #- ./docker-utils/ssl/:/site/ssl/
       - static-volume:/static
     command: /bin/bash -c "envsubst '$$NGINX_HTTP_PORT $$NGINX_HTTPS_PORT' < /root/default.template.conf > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
     environment:
