--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ python-crontab==2.3.6
 python-dateutil==2.8.0
 python-jose==3.0.1
 pytz==2019.1
+redis==2.10.5
 rsa==4.0
 six==1.12.0
 sqlparse==0.3.0
