reporte de usuario NBC

--- a/.env
+++ b/.env
@@ -5,3 +5,9 @@ export DB_USER='postgres'
 export DB_NAME='universal'
 export DJANGO_SETTINGS_MODULE='universal.settings.develop'
 export SECRET_KEY='65yys=&@7ox9*m46%w@t%@c3o=#19%ju)5otg85)n#+9jg&cr!'
+export EMAIL_USE_TLS='True'
+export EMAIL_HOST='smtp.gmail.com'
+export EMAIL_HOST_USER='claudiam.texcucano@gmail.com'
+export EMAIL_HOST_PASSWORD='claudia333ale'
+export EMAIL_PORT='587'
+export EMAIL_BACKEND='django.core.mail.backends.smtp.EmailBackend'
