--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ django-cors-headers==2.4.0
 django-timezone-field==3.0
 djangorestframework==3.9.4
 ecdsa==0.13.2
+et-xmlfile==1.0.1
 future==0.17.1
+jdcal==1.4.1
 kombu==4.6.3
 luhn==0.2.0
 openpyxl==2.5.9
@@ -18,7 +20,7 @@ python-crontab==2.3.6
 python-dateutil==2.8.0
 python-jose==3.0.1
 pytz==2019.1
-redis==2.10.5
+redis==3.2.0
 rsa==4.0
 six==1.12.0
 sqlparse==0.3.0
