--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,7 +67,7 @@ services:
       - app
     volumes:
       - ./docker-utils/nginx/default.template.conf:/root/default.template.conf
-      #- ./docker-utils/ssl/:/site/ssl/
+      - ./docker-utils/ssl/:/site/ssl/
       - static-volume:/static
     command: /bin/bash -c "envsubst '$$NGINX_HTTP_PORT $$NGINX_HTTPS_PORT' < /root/default.template.conf > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
     environment:
