--- a/docker-utils/nginx/default.template.conf
+++ b/docker-utils/nginx/default.template.conf
@@ -9,6 +9,8 @@ server {
       listen ${NGINX_HTTP_PORT};
       client_max_body_size 0;
 
+      server_name devslmt.com www.devslmt.com;
+
       location /static/ {
               autoindex on;
               alias /static/;
@@ -34,6 +36,19 @@ server {
 server {
       listen ${NGINX_HTTPS_PORT} ssl http2;
       client_max_body_size 0;
+
+      server_name devslmt.com www.devslmt.com;
+
+      ssl_certificate /site/ssl/server.pem;
+      ssl_certificate_key /site/ssl/server.key;
+      ssl_session_timeout 1d;
+      ssl_session_cache shared:SSL:50m;
+      ssl_session_tickets off;
+
+
+      ssl_protocols TLSv1.2;
+      ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256';
+      ssl_prefer_server_ciphers on;
 
       location /static/ {
               autoindex on;
